bk_ida/gccida/g0/get_attr_mode
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_mode/src/insn-attrtab.c:17237:1: error: must use 'enum' tag to refer to type 'attr_mode'
attr_mode  get_attr_mode( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_mode/src/insn-attrtab.c:17240:1: error: must use 'enum' tag to refer to type 'attr_mode'
attr_mode result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_mode/src/insn-attrtab.c:17250:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 17669, "get_attr_mode"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_mode/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_mode/src/insn-attrtab.c:17250:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 17669, "get_attr_mode"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_mode/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_mode/src/insn-attrtab.c:17752:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !aligned_operand( recog_data_0.operand[1], HImode)) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_mode/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_mode/src/insn-attrtab.c:17756:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& aligned_operand( recog_data_0.operand[1], HImode) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_mode/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_mode/src/insn-attrtab.c:17800:32: error: use of undeclared identifier 'recog_data_0'
if ( q_regs_operand( ( __int64)recog_data_0.operand[0], 2) && ( ( x86_movx >> ix86_cpu) & 1) == 0 ) 
                               ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_mode/src/obj/insn-attrtab.o] Error 1
